@@ -1,3 +1,12 @@
+2011-07-20  Ojan Vafai  <ojan@chromium.org>
+
+        make the treemap display more human friendly
+        https://bugs.webkit.org/show_bug.cgi?id=64896
+
+        Reviewed by Tony Chang.
+
+        * TestResultServer/static-dashboards/treemap.html:
+
 2011-07-20  Eric Seidel  <eric@webkit.org>
 
         Move HttpLock to using a FileSystem object
